# jni-direct-access-example

./: .gitignore  README.md  pom.xml
native/: CMakeLists.txt  native_code.c
src/main/java/com/afermiano/jnidirectaccessexample/: App.java  NativeBridge.java
